<resources>
    <string name="app_name">TFG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tienda">Tienda</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="menu_configuracion">Configuracion</string>
</resources>